# seomate-internal-be

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: keepalive.yml
seomate_api/: __init__.py  __main__.py  auth.py  deps.py  loop.py  main.py  settings.py
seomate_api/routes/: __init__.py  audits.py  competitive.py  projects.py  saved.py  strategy.py  taxonomy.py
seomate_api/schemas/: __init__.py  audit.py  capture.py  taxonomy.py
